<resources>
    <string name="app_name">FitnessAppProject475</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="nutrition">Nutrition</string>
    <string name="todo">TO DO:</string>
    <string name="textview">What did you eat today?</string>
    <string name="totalcalsburned">Total Calories Burned!</string>
    <string name="picks">Pick from below:</string>
    <string name="workoutpicks">Pick Workout(s): </string>
    <string name="activitesoverview">Activities Overview</string>
    <string name="calsburned">Calories Burned</string>
    <string name="overallgoals">Overall goals met!</string>
    <string name="Height">Height: </string>
    <string name="StartedWeight">Started Weight: </string>
    <string name="CurrentWeight">Current Weight: </string>
    <string name="totcalsN">Total Calories Eaten: </string>
    <string name="calsleftN">Total Calories Left: </string>
    <string name="burned">Calories Burned:</string>
    <string name="calsburnedtd">Burned Goal:</string>
    <string name="submitfood">Submit Food</string>
    <string name="pedometer">Pedometer</string>
    <string name="exercise">Exercise</string>
    <string name="profile">Profile</string>
    <string name="string_0">0</string>
    <string name="username">Name</string>
    <string name="weight">Weight:</string>
    <string name="update_goals">Update Goals</string>
    <string name="calcount">TextView</string>
    <string name="goals">Goals</string>
    <string name="daily_calorie_intake">Daily Calorie Intake</string>
    <string name="current_weight">Current Weight:</string>
    <string name="starting_weight">Starting Weight:</string>
    <string name="height1">Height:</string>
    <string name="heightoutput">TextView</string>
    <string name="startweightoutput">TextView</string>
    <string name="currentweightoutput">TextView</string>
    <string name="dailycaloriteburnedoutput">TextView</string>
    <string name="daily_calories_burned">Daily Calories Burned:</string>
    <string name="weight_goal">Weight Goal:</string>
    <string name="weightgoaloutput">TextView</string>
    <string name="todooutput">TODO</string>
    <string name="height">Height:</string>
    <string name="goalsregistration">TextView</string>
    <string name="goalsregistrations">Goals</string>
    <string name="registration">Email</string>
    <string name="todays_stats">Today\'s Stats</string>
    <string name="calorie_intake">Calorie Intake</string>
    <string name="burned_calories">Burned Calories</string>
    <string name="update_statistics">Update Statistics</string>
    <string name="usernamefromgoogle">TextView</string>
    <string name="pic">TextView</string>
    <string name="idfromgoogle">TextView</string>
    <string name="emailfromg">jdoe465@gmail.com</string>
    <string name="namefromgoogle">John Doe</string>
    <string name="sign_out">Sign Out</string>
    <string name="settings">Settings</string>
</resources>