<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:title="Profile"
            android:icon="@drawable/outline_settings_24"
            />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_other_houses_20"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_exercise"
            android:icon="@drawable/outline_run_circle_20"
            android:title="@string/exercise" />
        <item
            android:id="@+id/nav_nutrition"
            android:icon="@drawable/outline_local_dining_24"
            android:title="@string/nutrition" />
        <item
            android:id="@+id/nav_pedometer"
            android:icon="@drawable/baseline_data_saver_off_20"
            android:title="@string/pedometer"
            />
    </group>
</menu>