<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">
    <fragment
        android:id="@+id/nav_signin"
        android:name="com.example.fitnessappproject475.MainActivity"
        android:label="@string/menu_home"
        tools:layout="@layout/activity_main" >
        <action
            android:id="@+id/action_nav_signin_to_nav_profile"
            app:destination="@id/nav_profile" />
    </fragment>
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.fitnessappproject475.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/nav_nutrition"
        android:name="com.example.fitnessappproject475.ui.Nutrition.NutritionFragment"
        android:label="@string/nutrition"
        tools:layout="@layout/fragment_nutrition" >
        <action
            android:id="@+id/action_nav_nutrition_to_nav_pedometer"
            app:destination="@id/nav_pedometer" />
    </fragment>
    <fragment
        android:id="@+id/nav_pedometer"
        android:name="com.example.fitnessappproject475.ui.Pedometer.PedometerFragment"
        android:label="@string/pedometer"
        tools:layout="@layout/pedometer_fragment" >
        <action
            android:id="@+id/action_nav_pedometer_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.fitnessappproject475.login"
        android:label="Settings"
        tools:layout="@layout/profile_fragment" >
    </fragment>
</navigation>