<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/calorieLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="84dp"
        android:text="@string/calorie_intake"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/burnedcalorieLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="516dp"
        android:text="@string/burned_calories"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calorieLabel"
        app:layout_constraintVertical_bias="0.43" />

    <TextView
        android:id="@+id/todayLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todays_stats"
        app:layout_constraintBottom_toTopOf="@+id/calorieLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.753" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="121dp"
        android:layout_height="37dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.017"
        app:layout_constraintStart_toEndOf="@+id/calorieLabel"
        app:layout_constraintTop_toTopOf="@+id/todayLabel"
        app:layout_constraintVertical_bias="0.027"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="125dp"
        android:layout_height="36dp"
        android:layout_marginEnd="88dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calorieLabel"
        app:layout_constraintVertical_bias="0.0"
        android:importantForAutofill="no" />

</androidx.constraintlayout.widget.ConstraintLayout>